Fix <color-box> alignment in dropdowns

--- a/client/app/components/color-box.less
+++ b/client/app/components/color-box.less
@@ -3,4 +3,8 @@ color-box {
   vertical-align: text-bottom;
   display: inline-block;
   margin-right: 5px;
+
+  & ~ span {
+    vertical-align: bottom;
+  }
 }
